@@ -416,6 +416,8 @@ Misc
 |F	|Toggle reference display on/off (tag and branch names).
 |W	|Toggle ignoring whitespace on/off for diffs
 |X	|Toggle commit ID display on/off
+|%	|Toggle file filtering in order to see the full diff instead of only
+	 the diff concerning the currently selected file.
 |:	|Open prompt. This allows you to specify what command to run.
 |e	|Open file in editor.
 |=============================================================================
